--- a/Assignment3/information.css
+++ b/Assignment3/information.css
@@ -1,212 +1,169 @@
-/* http://meyerweb.com/eric/tools/css/reset/ 
-   v2.0 | 20110126
-   License: none (public domain)
-*/
-
-html, body, div, span, applet, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-a, abbr, acronym, address, big, cite, code,
-del, dfn, em, img, ins, kbd, q, s, samp,
-small, strike, strong, sub, sup, tt, var,
-b, u, i, center,
-dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed, 
-figure, figcaption, footer, header, hgroup, 
-menu, nav, output, ruby, section, summary,
-time, mark, audio, video {
-	margin: 0;
-	padding: 0;
-	border: 0;
-	font-size: 100%;
-	font: inherit;
-	vertical-align: baseline;
-}
-/* HTML5 display-role reset for older browsers */
-article, aside, details, figcaption, figure, 
-footer, header, hgroup, menu, nav, section {
-	display: block;
-}
-body {
-	line-height: 1;
-}
-ol, ul {
-	list-style: none;
-}
-blockquote, q {
-	quotes: none;
-}
-blockquote:before, blockquote:after,
-q:before, q:after {
-	content: '';
-	content: none;
-}
-table {
-	border-collapse: collapse;
-	border-spacing: 0;
-}
-/* ------------------------------------------- */
+html,body { height:100%; }
 
 body {
-  background-color:#fffcec;
+  margin:0px;
+  padding:0px;
+  border:0px;
 }
 
-.TopBar {
-  height:115px;
-  width:100%;
-  background-color:#99D9EA;
-  
-}
-
-.heading {
-  width:500px;
-  font-family:verdana;
-  font-size:30px;
-  color:black;
-  padding:20px;
-  background-color:#CFEEF5;
-}
-.pad {
-  padding:2px;
-}
-
-#inline h1,
-#inline p {
-  margin-left:10px;
-  display:inline;
-  line-height: 28px;
-}
-
-.f-right {
-  padding-top:10px;
-  float:right;
-}
-
-.SideBar {
+.GridContainer {
+  display:grid;
+  grid-template-columns: 17% 8% 25% 25% 25%; 
+  grid-template-rows:90px auto;
+  background-color:#2196F3;
   height:100%;
-  width:220px;
-  z-index:1;
-  overflow-x:hidden;
-  background-color:#99D9EA;
-  float:left;
 }
 
-#add {
+.GridContainer > header{
+  background-color: #99D9EA;
+  text-align:left;
+  padding: 0 20px;
+}
+
+.GridContainer > div.topnav {
+  background-color: #99D9EA;
+  text-align:right;
+  padding:20px 0;
+}
+
+.GridContainer > nav{
+  background-color: #99D9EA;
+  text-align:center;
+  padding:0 0;
+  height: auto;
+}
+
+#AddLocation {
+  margin-top:0px;
   margin-left:20px;
   margin-right:20px;
-  margin-bottom:20px;
+  width:auto;
+  height:auto;
   background-color:#CFEEF5;
 }
 
-#add button {
+#btnAddLocation {
   width:100%;
   height:40px;
   background-color:#CFEEF5;
-}
-
-#LocationBox {
-  height:77%;
-  margin-left:20px;
-  margin-right:20px;
-  position:fixed;
-  overflow-x:hidden;
-  background-color:#CFEEF5;
-}
-
-.location {
-  width:140px;
-  padding:20px;
-}
-
-main {
-  margin-top:0px;
-  margin-bottom:0px;
-  margin-left:220px;
-  margin-right:0px;
-  align-content:inline;
-  padding-top:10px;
-  padding-right:10px;
-  font-family:verdana;
-  display:flex;
-}
-
-main h2 {
   font-size:20px;
 }
 
-main p {
-
+#location {
+  margin-top:20px;
+  margin-left:20px;
+  margin-right:20px;
+  width:auto;
+  height:90%;
+  overflow-x:auto;
+  overflow-y:auto;
+  text-align:left;
+  background-color:#CFEEF5;
 }
 
-#graphs {
+.area {
+  padding-top:20px;
+  padding-left:20px;
+  font-weight:bold;
+}
+
+.tank {
+  padding-left:20px;
+  font-weight:normal;
+}
+
+.GridContainer > main{
+  background-color: white;
+  text-align:center;
+  padding:20px 0;
+}
+
+#menubar {
   margin-left:10px;
   margin-right:10px;
   float:left;
-  align-content:center;
+  align-content:inline;
+  display:flex;
 }
 
-.data img{
-  display: block;
-  margin-top:10px;
-  margin-bottom:10px;
-  margin-left: auto;
-  margin-right: auto;
-  width: 900px;
+#menubar h2 {
+  font-size:20px;
 }
 
-#time {
+#timebar {
   background-color:#CFEEF5;
-  padding-left:20px;
-  padding-right:0px;
+  padding-left:10px;
+  padding-right:10px;
   width:auto;
   display:flex;
   align-content:center;
+  margin-left:10px;
+  margin-right:10px;
 }
 
-#time button {
+#timebar button {
   margin-top:10px;
   margin-bottom:10px;
   margin-left:2px;
   margin-right:2px;
 }
 
-#warnings {
-  margin-left:10px;
-  margin-right:10px;
-  float:left;
+#warningtitle {
   background-color:#CFEEF5;
-  width:300px;
-  align-content:center;
-  text-align:center;
-  height:42px;
-  display:flex;
-  justify-content:center;
-  align-items:center;
-}
-
-#warnings h2 {
-  
-}
-
-#description {
-  margin-left:10px;
-  margin-right:10px;
-  float:right;
-  background-color:#CFEEF5;
+  padding-left:10px;
+  padding-right:10px;
   width:auto;
-  align-content:center;
-  text-align:center;
-  height:42px;
+  display:flex;
+  margin-left:10px;
+  margin-right:10px;
   flex-grow:1;
-  display:flex;
-  justify-content:center;
-  align-items:center;
 }
 
-#description p {
-  height:304px;
+#descriptiontitle {
+  background-color:#CFEEF5;
+  padding-left:10px;
+  padding-right:10px;
   width:auto;
-  padding:auto;
+  margin-left:10px;
+  margin-right:10px;
+  flex-grow:1;
+}
+
+.GridContainer > footer{
+  background-color: #99D9EA;
+  text-align:center;
+  padding:20px 0;
+}
+
+#item1 h1 {
+  background-color:#CFEEF5;
+  padding-left:20px;
+}
+
+footer {
+  position:absolute;
+  bottom:0;
+  width:100%;
+  height:10px;
+}
+
+#item1 {
+  grid-column: 1/4;
+}
+
+#item2 {
+  grid-column: 4/6;
+}
+
+#item3 {
+  grid-column: 1/1;
+}
+
+#item4 {
+  grid-column: 2/6;
+}
+
+#item5 {
+  grid-column: 1/6;
 }
 
