--- a/Assignment3/information.css
+++ b/Assignment3/information.css
@@ -36,6 +36,7 @@ body {
 #item4 {
   width:auto;
   grid-column: 2/6;
+  background-color:#fffcec;
 }
 
 #AddLocation {
@@ -151,7 +152,7 @@ body {
 }
 
 footer {
-  position:absolute;
+  position:relative;
   bottom:0;
   width:100%;
   height:10px;
@@ -184,6 +185,14 @@ footer {
   margin-bottom:10px;
   height: 370px; 
   width:100%;
-  float:left;
-  clear:both;
+}
+
+.pad {
+  padding-top:0px;
+  padding-bottom:20px;
+}
+
+#graphs button {
+  font-weight:bold;
+  background-color:#CFEEF5;
 }
